most functionality done
